fixed TOC text alignment

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -512,7 +512,7 @@ section
 			background-color: $light-grey
 			border-left: 3px solid $blue
 			padding: 7.5px 10px 7.5px 18px
-			margin-left: -21px
+			margin-left: -3px
 			color: $blue
 
 .open-toc
@@ -526,11 +526,6 @@ section
 		overflow-y: auto
 
 .pi-accordion
-	margin-left: -20px
-
-	.container
-		padding-left: 20px
-
 	.item
 		overflow: hidden
 
@@ -546,7 +541,6 @@ section
 
 	a.item > .title
 		color: black
-		padding-left: 0
 
 		&:hover
 			color: $blue
